feat: Swagger add queries to tutor
